# dyros_bolt

dyros_bolt_controller/: CMakeLists.txt  package.xml
dyros_bolt_controller/include/dyros_bolt_controller/: control_base.h  dyros_bolt_controller.h  dyros_bolt_model.h  mujoco_interface.h  state_manager.h
dyros_bolt_controller/src/: control_base.cpp  dyros_bolt_controller.cpp  main.cpp  mujoco_interface.cpp  state_manager.cpp  watcher.cpp
dyros_bolt_description/mujoco_model/: bolt_6dof.xml
dyros_bolt_description/robots/: bolt.urdf
dyros_bolt_description/setting/: setting_realrobot_parameters.yaml  setting_realrobot_positionPDgain.yaml
dyros_bolt_launch/launch/: imu.launch  mujoco_torque.launch  realrobot.launch  realrobot_w_gui.launch  simulation.launch
dyros_bolt_lib/: CMakeLists.txt  package.xml
dyros_bolt_lib/include/: math_type_define.h  shm_msgs.h
dyros_bolt_lib/include/dyros_bolt_lib/: dyros_bolt.h  robot_data.h  state_manager.h
dyros_bolt_lib/src/: state_manager.cpp  wholebody_functions.cpp
dyros_bolt_msgs/: CMakeLists.txt
dyros_bolt_msgs/msg/: torqueCommand.msg
dyros_bolt_real_robot/: CMakeLists.txt  package.xml
dyros_bolt_real_robot/include/dyros_bolt_real_robot/: control_base.h  odrive_socketcan.h  odrive_socketcan_master.h  odrive_socketcan_settings.h  odrive_socketcat_settings.h  real_robot_interface.h
dyros_bolt_real_robot/odrive_config/: odrive.yaml
dyros_bolt_real_robot/src/: control_base.cpp  main_real_robot.cpp  odrive_socketcan.cpp  odrive_socketcan_master.cpp  odrive_socketcan_settings.cpp  odrive_socketcat_settings.cpp  real_robot_interface.cpp
dyros_bolt_sensor/src/: sensor_manager.cpp
